--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <title>
       RRB collab app
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+
   </head>
 
   <body>
