Edited css - imgs, gradient, & fixed room name thing

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Prata" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre" rel="stylesheet">
-
-
-
-
-
-
-
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
 
   <body>
