--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,15 @@
     <title>
       RRB collab app
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Croissant+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Croissant+One" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Prata" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Prata" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   </head>
 
   <body>
