Made Roboto main non-header text for now

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   </head>
 
   <body>
